--- a/index.html
+++ b/index.html
@@ -7,7 +7,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Assignment-2</title>
     <!-- google-fonts-links -->
-
+    <style>
+        @import url('https://fonts.googleapis.com/css2?family=Island+Moments&family=Poppins:ital,wght@0,500;1,300&display=swap');
+    </style>
     <!-- font Awesome -->
     <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css" integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous" />
 
@@ -31,8 +33,8 @@
             </ul>  -->
 
         </nav>
-        <div class="icons"><i class="fas fa-search"></i></div>
-        <div class="icons"><i class="fas fa-shopping-cart"></i></div>
+        <!-- <div class="icons"><i class="fas fa-search"></i></div>
+        <div class="icons"><i class="fas fa-shopping-cart"></i></div>  -->
     </header>
 
 
@@ -42,7 +44,7 @@
                 <h1>Start your Journey as Influencer </h1>
                 <h1>Influencer </h1>
                 <p>
-                    Lorem, ipsum dolor sit amet consectetur adipisicing elit. Similique, officiis omnis hic voluptatum deleniti quis ut tenetur, reiciendis modi facilis,
+                    Discover, analyze and build relationships with social media influencers
                 </p>
                 <button class="b-one">Preebook now <i class="fas fa-arrow-right"></i></button>
             </div>
@@ -383,12 +385,15 @@
     <section>
         <button class="b-two">see more <i class="fas fa-arrow-right"></i></button>
     </section>
-
+    <br>
 
     <section class="last">
-        <h1 Class="last-one">Influencer products</h1>
-        <p class="last-two">Copyright <i class="far fa-copyright"></i> 2022 influencer products</p>
-        <p class="last-there">All right reserved</p>
+        <div class="last-five">
+            <h1 Class="last-one">Influencer products</h1>
+            <p class="last-two">Copyright <i class="far fa-copyright"></i> 2022 influencer products</p>
+            <p class="last-there">All right reserved</p>
+
+        </div>
         <div class="last-four">
             <i class="fab fa-instagram"></i> <i class="fab fa-facebook-square"></i> <i class="fab fa-twitter-square"></i> <i class="fab fa-youtube-square"></i>
         </div>
