--- a/index.html
+++ b/index.html
@@ -382,7 +382,7 @@
 
     <!-- ------------------see more------------------------ -->
 
-    <section>
+    <section class="right">
         <button class="b-two">see more <i class="fas fa-arrow-right"></i></button>
     </section>
     <br>
