--- a/index.html
+++ b/index.html
@@ -23,18 +23,18 @@
         <p class="logo">Influencer products</p>
         <nav>
 
-            <!-- <ul class="nav-bar">
+            <ul class="nav-bar">
 
-                <li><a href="">Home</a></li>
-                <li> <a href="">Products</a></li>
-                <li><a href="">Sign up</a></li>
-                <li> <a href="">Log in</a></li>
+                <li><a class="h" href="">Home</a></li>
+                <li> <a class="h" href="">Products</a></li>
+                <li><a class="h" href="">Sign up</a></li>
+                <li> <a class="h" href="">Log in</a></li>
 
-            </ul>  -->
+            </ul>
 
         </nav>
-        <!-- <div class="icons"><i class="fas fa-search"></i></div>
-        <div class="icons"><i class="fas fa-shopping-cart"></i></div>  -->
+        <div class="icons"><i class="fas fa-search"></i></div>
+        <div class="icon"><i class="fas fa-shopping-cart"></i></div>
     </header>
 
 
